--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,5 +6,13 @@
 {% endblock %}
 
 {% block content %}
-<h3>Hello welcome</h3>
+{% for product in products %}
+<div class="card" style="width: 18rem;">
+    <a href="{{ product.get_absolute_url }}"><img class="card-img-top" src="{{ product.image.url }}">
+        <div class="card-body">
+            <h5 class="card-title">{{ product.name }}</h5>
+        </div>
+    </a>
+</div>
+{% endfor %}
 {% endblock %}
