--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -3,8 +3,11 @@
         <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="{% url 'home:home' %}">Home</a>
             {% if request.user.is_authenticated %}
-            <a class="nav-link active" aria-current="page" href="">{{ request.user.full_name }}</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'home:home' %}">{{ request.user.full_name }}</a>
             <a class="nav-link active" aria-current="page" href="{% url 'accounts:user_logout' %}">Logout</a>
+            {% if request.user.is_admin %}
+            <a class="nav-link active" aria-current="page" href="{% url 'home:bucket' %}">Bucket</a>
+            {% endif %}
             {% else %}
             <a class="nav-link active" aria-current="page" href="{% url 'accounts:user_register' %}">Register</a>
             <a class="nav-link active" aria-current="page" href="{% url 'accounts:user_login' %}">Login</a>
