--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,13 +6,32 @@
 {% endblock %}
 
 {% block content %}
+
+{% for category in categories %}
+<div class="btn-group">
+    <a href="{{ category.get_absolute_url }}" class="btn btn-danger">{{ category.name }}</a>
+    <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu">
+        {% for sub in category.scategory.all %}
+        <li><a class="dropdown-item" href="{{ sub.get_absolute_url }}">{{ sub.name }}</a></li>
+        {% endfor %}
+    </ul>
+</div>
+{% endfor %}
+
+<br><br>
 {% for product in products %}
-<div class="card" style="width: 18rem;">
-    <a href="{{ product.get_absolute_url }}"><img class="card-img-top" src="{{ product.image.url }}">
+<div class="card" style="width: 18rem; display:inline-block;">
+    <a href="{{ product.get_absolute_url }}"><img class="card-img-top" src="{{ product.image.url }}" width=200
+            height=200>
         <div class="card-body">
             <h5 class="card-title">{{ product.name }}</h5>
         </div>
     </a>
 </div>
 {% endfor %}
+
 {% endblock %}
