--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
         <div class="navbar-nav">
@@ -12,6 +13,8 @@
             <a class="nav-link active" aria-current="page" href="{% url 'accounts:user_register' %}">Register</a>
             <a class="nav-link active" aria-current="page" href="{% url 'accounts:user_login' %}">Login</a>
             {% endif %}
+            <a class="nav-link active" aria-current="page" href="{% url 'orders:cart' %}"><img
+                    src="{% static 'img/cart.png' %}" alt="cart"> {{ cart|length }}</a>
         </div>
     </div>
 </nav>
