--- a/home/templates/home/detail.html
+++ b/home/templates/home/detail.html
@@ -6,7 +6,7 @@
 <p><b>{{ product.price }} Toman</b></p>
 <img src="{{ product.image.url }}" alt="" style="width: 18rem;">
 <hr>
-<p>{{ product.description }}</p>
+<p>{{ product.description|safe }}</p>
 <br>
 <form action="{% url 'orders:cart_add' product.id %}" method="post">
     {% csrf_token %}
